--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ php:
   - '5.6'
   - '7.1'
   - nightly
-before_script:
+services:
+  - mysql
+script:
+  - mysql -e 'CREATE DATABASE gatherling DEFAULT CHARACTER SET latin1;'
+  - cp config.php.travisci config.php
   - php admin/db-upgrade.php
   - php util/updateDefaultFormats.php
+  - phpunit tests/*.php
