Google Analytics should be configurable.

--- a/config.php.example
+++ b/config.php.example
@@ -10,7 +10,7 @@ $CONFIG['db_password'] = 'Lk33;=a4IZEh';
 $CONFIG['db_database'] = 'gatherli_gatherling';
 
 # === Website ===
-# The base url where gatherling is installed.
+# The base url where gatherling is installed.  This should be an absolute URL.
 $CONFIG['base_url'] = "http://localhost/gatherling/";
 # The name of your site.  This is used in a lot of places.
 $CONFIG['site_name'] = "Gatherling.com";
@@ -18,6 +18,8 @@ $CONFIG['site_name'] = "Gatherling.com";
 $CONFIG['style'] = "Chandra";
 # A description for the ical calendar which is accessible at calendar.php
 $CONFIG['calendar_description'] = "a description for the events calendar";
+# Google Analytics account ID.
+$CONFIG['analytics_account'] = 'UA-37926034-1';
 
 # === Infobot PARAMETERS ==
 # If you have set it up with infobot to contact the site, you can change the passkey here.
