--- a/.editorconfig
+++ b/.editorconfig
@@ -4,9 +4,12 @@ root = true
 # Unix-style newlines with a newline ending every file
 [*]
 insert_final_newline = true
+trim_trailing_whitespace = true
+indent_style = space
+charset = utf-8
 
 [*.php]
-charset = utf-8
-indent_style = space
+indent_size = 2
+
+[*.js]
 indent_size = 4
-trim_trailing_whitespace = true
