--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,6 @@
     "require": {
         "wohali/oauth2-discord-new": "^1.0",
         "sentry/sdk": "^3.0.0",
-        "ypho/scryfall": "dev-master"
+        "ypho/scryfall": "^1.0"
     }
 }
