--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -15,6 +15,23 @@ jobs:
     # - name: Validate composer.json and composer.lock
     #   run: composer validate
 
+    - name: Setup PHP with PECL extension
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '7.4'
+
+    - uses: mirromutth/mysql-action@v1.1
+      with:
+        mysql version: '5'
+        mysql database: gatherling
+        mysql user: gatherling
+        mysql password: gatherling
+
+    - name: Setup problem matchers for PHP
+      run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
+    - name: Setup problem matchers for PHPUnit
+      run: echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
+
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v2
@@ -27,6 +44,7 @@ jobs:
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
       run: composer install --prefer-dist --no-progress --no-suggest
+    - run: cp gatherling/config.php.github gatherling/config.php
     - run: php gatherling/admin/db-upgrade.php
     - run: php gatherling/util/insertcardset.php M10
     - run: php gatherling/util/insertcardset.php ELD
