--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,8 @@
         "wohali/oauth2-discord-new": "^1.0",
         "sentry/sdk": "^3.0.0",
         "ypho/scryfall": "^1.0"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "3.*"
     }
 }
