--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -8,6 +8,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: gatherling
+        ports:
+        - 3306:3306
 
     steps:
     - uses: actions/checkout@v2
@@ -19,12 +26,6 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '7.4'
-
-    - uses: getong/mariadb-action@v1.1
-      with:
-        mysql database: gatherling
-        mysql user: gatherling
-        mysql password: gatherling
 
     - name: Setup problem matchers for PHP
       run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
@@ -48,7 +49,8 @@ jobs:
     - run: php gatherling/util/insertcardset.php M10
     - run: php gatherling/util/insertcardset.php ELD
     - run: php gatherling/util/updateDefaultFormats.php
-    - run: phpunit -v tests/
+    - uses: php-actions/phpunit@v2
+    # - run: phpunit -v tests/
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
