--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -49,8 +49,8 @@ jobs:
     - run: php gatherling/util/insertcardset.php M10
     - run: php gatherling/util/insertcardset.php ELD
     - run: php gatherling/util/updateDefaultFormats.php
-    - uses: php-actions/phpunit@v2
-    # - run: phpunit -v tests/
+    # - uses: php-actions/phpunit@v2
+    - run: phpunit -v tests/
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
