--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ypho/scryfall": "^1.0"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "3.*"
+        "squizlabs/php_codesniffer": "3.*",
+        "phpunit/phpunit": "^9.5"
     }
 }
