--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,9 +1,22 @@
-pull_request_rules:
-  - name: Automatic merge on approval
+queue_rules:
+  - name: default
     conditions:
+      - status-success=build
+
+pull_request_rules:
+  - name: merge approved changes
+    conditions:
+      - base=dev
       - "#approved-reviews-by>=1"
-      - status-success=Travis CI - Pull Request
     actions:
-      merge:
-        method: squash
-        strict: true
+      queue:
+        name: default
+  - name: automerge dependencies
+    conditions:
+      - author~=(pyup-bot|dependabot)
+      - -files~=^(!?.github/workflows/)
+    actions:
+      queue:
+        name: default
+
+
