--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,11 @@
     "description": "Magic the Gathering tournament software",
     "require": {
         "php": "8.1.*",
+        "ext-curl": "*",
+        "ext-mysqli": "*",
         "wohali/oauth2-discord-new": "^1.0",
         "sentry/sdk": "^4.0",
         "ypho/scryfall": "^1.0",
-        "ext-curl": "*",
         "firebase/php-jwt": "^6.10"
     },
     "require-dev": {
