--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "8.1.*",
         "ext-curl": "*",
         "ext-mysqli": "*",
+        "ext-simplexml": "*",
         "wohali/oauth2-discord-new": "^1.0",
         "sentry/sdk": "^4.0",
         "ypho/scryfall": "^2.0",
