--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - "3307:3306"
     volumes:
       - ./backups:/docker-entrypoint-initdb.d
-  adminer:
-    image: adminer
+  phpmyadmin:
+    image: phpmyadmin
     ports:
-      - 8080:8080
+      - 8080:80
