--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
       - db
     env_file: .env
     volumes:
-      - ./gatherling:/var/www/html/local
+      - ./gatherling:/var/www/html
+      - /var/www/html/vendor
       - ./:/var/repo
   db:
     image: mariadb
