--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "wohali/oauth2-discord-new": "^1.0",
         "sentry/sdk": "^4.0",
         "ypho/scryfall": "*",
-        "firebase/php-jwt": "^6.10"
+        "firebase/php-jwt": "^6.10",
+        "mustache/mustache": "^2.14"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
