--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
         "php": "8.1.*",
         "ext-curl": "*",
         "ext-mysqli": "*",
+        "ext-pdo": "*",
+        "ext-pdo_mysql": "*",
         "ext-simplexml": "*",
         "wohali/oauth2-discord-new": "^1.0",
         "sentry/sdk": "^4.0",
