--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,12 @@
         "squizlabs/php_codesniffer": "3.*",
         "phpunit/phpunit": "^9.5",
         "phpcompatibility/php-compatibility": "^9.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "Gatherling\\": "gatherling/models/",
+            "Gatherling\\Pages\\": "gatherling/pages/",
+            "": "gatherling/"
+        }
     }
 }
