--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Gatherling\\": "gatherling/models/",
+            "Gatherling\\Models\\": "gatherling/models/",
             "Gatherling\\Pages\\": "gatherling/pages/",
             "": "gatherling/"
         }
