Now that our files are laid out in the psr-4 way, use the simpler autoloading settings

--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Gatherling\\Models\\": "gatherling/models/",
-            "Gatherling\\Pages\\": "gatherling/pages/",
-            "": "gatherling/"
+            "Gatherling\\": "gatherling/"
         }
     }
 }
