Temporarily force autoloader dump to complete CI/CD

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -45,6 +45,8 @@ jobs:
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
       run: composer install --prefer-dist --no-progress
+    - name: Regenerate Autoloader
+      run: composer dump-autoload
     - name: Wait for MySQL server to be ready
       run: |
         while ! mysqladmin ping -h"127.0.0.1" --silent; do
