Add a logger, using monolog, implementing the PSR LoggerInterface
Also take this opportunity to introduce some exceptions of our own. Top-level
handling of these is a ways off but at least we have this stake in the ground.

Here we are also starting to namespace our tests in Gatherling\Tests. Eventually
we will namespace everything.

--- a/gatherling/config.php.example
+++ b/gatherling/config.php.example
@@ -2,7 +2,9 @@
 
 # CONFIGURATION FILE FOR GATHERLING
 # CHANGE THE FOLLOWING VARIABLES
-#
+
+$CONFIG['env'] = 'dev'; # Should be 'prod' for production.
+
 # === Database ===
 $CONFIG['db_hostname'] = 'localhost';
 $CONFIG['db_username'] = 'gatherli_public';
