--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "sentry/sdk": "^4.0",
         "ypho/scryfall": "*",
         "firebase/php-jwt": "^6.10",
-        "mustache/mustache": "^2.14"
+        "mustache/mustache": "^2.14",
+        "monolog/monolog": "^3.7"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
@@ -22,7 +23,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Gatherling\\": "gatherling/"
+            "Gatherling\\": "gatherling/",
+            "Gatherling\\Tests\\": "tests/"
         }
     }
 }
