--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": ">=10.0",
         "phpcompatibility/php-compatibility": "^9.3"
     },
     "autoload": {
