--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,11 @@
     "name": "pennydreadfulmagic/gatherling",
     "description": "Magic the Gathering tournament software",
 	"version": "5.1.0",
+    "scripts": {
+        "test": "vendor/bin/phpunit tests",
+        "lint": "vendor/bin/phpcs --standard=PSR12 --runtime-set testVersion 8.1 --ignore=vendor .",
+        "autofix": "vendor/bin/phpcbf --standard=PSR12 --runtime-set testVersion 8.1 --ignore=vendor ."
+    },
     "require": {
         "php": "8.1.*",
         "ext-curl": "*",
