"Modernize" how we do dev setup and some of the maintenance tasks
  - Alter docker setup to accommodate running tests/autoloader more easily
  - Change exactly how we mount stuff in docker for same
  - Update docker stuff to understand there is a test db now distinct from the dev or prod db
  - Update README to explain how to set up a dev env in the new situation
  - Start to namespace stuff in admin. Need to figure out the eventual goal here
  - Don't try and pass along PDOException codes when rethrowing. Despite being documented as ints they are strings.
  - Remove all the old migrations from db-upgrade.php and repurpose it as a simple wrapper around the new stuff
  - Repurpose insertcardset to do things the new way
  - Repurpose updateDefaultFormats to do things the new way. As it stands this won't work out of the box because you need to import every set in Modern. Will ponder what we want here. If you restore a copy of the prod db you're alright.

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "autoload": {
         "psr-4": {
             "Gatherling\\": "gatherling/",
+            "Gatherling\\Admin\\": "gatherling/",
             "Gatherling\\Tests\\": "tests/"
         }
     }
