--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
 	"version": "5.1.0",
     "scripts": {
         "test": "vendor/bin/phpunit tests",
-        "lint": "vendor/bin/phpcs --standard=PSR12 --runtime-set testVersion 8.1 --ignore=vendor .",
-        "autofix": "vendor/bin/phpcbf --standard=PSR12 --runtime-set testVersion 8.1 --ignore=vendor ."
+        "lint": "vendor/bin/phpcs .",
+        "autofix": "vendor/bin/phpcbf ."
     },
     "require": {
         "php": "8.1.*",
