Remove obsolete commandline arg on test run
I have upgraded us to PHPUnit 10.5 which does not have this option.

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -55,7 +55,7 @@ jobs:
     - run: php gatherling/util/insertcardset.php M10
     - run: php gatherling/util/insertcardset.php ELD
     - run: php gatherling/util/updateDefaultFormats.php
-    - run: vendor/bin/phpunit -v tests/
+    - run: vendor/bin/phpunit tests/
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
