--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "ypho/scryfall": "*",
         "firebase/php-jwt": "^6.10",
         "mustache/mustache": "^2.14",
-        "monolog/monolog": "^3.7"
+        "monolog/monolog": "^3.7",
+        "symfony/dom-crawler": "^6.4",
+        "symfony/css-selector": "^6.4"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
