--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "scripts": {
         "test": "vendor/bin/phpunit tests",
         "lint": "vendor/bin/phpcs .",
-        "autofix": "vendor/bin/phpcbf ."
+        "autofix": "vendor/bin/phpcbf .",
+		"types": "vendor/bin/phpstan --memory-limit=2G"
     },
     "require": {
         "php": "8.1.*",
@@ -26,7 +27,8 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
         "phpunit/phpunit": ">=10.0",
-        "phpcompatibility/php-compatibility": "^9.3"
+        "phpcompatibility/php-compatibility": "^9.3",
+        "phpstan/phpstan": "^1.12"
     },
     "autoload": {
         "psr-4": {
