--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Magic the Gathering tournament software",
 	"version": "5.1.0",
     "scripts": {
-        "tests": "vendor/bin/phpunit tests",
+        "tests": "vendor/bin/phpunit --stop-on-defect tests",
         "lint": "vendor/bin/phpcs .",
         "autofix": "vendor/bin/phpcbf .",
 		"types": "vendor/bin/phpstan --memory-limit=2G",
